# scdv_news_corpus

./: Dockerfile  README.md  pyproject.toml
notebooks/: scdv_vs_other_methods_of_document_vector.ipynb
src/: constants.py  document_vectors.py  functions.py  utils.py
