[tool.poetry]
name = "scdv_news_corpus"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.5"
pandas = "^1.5.2"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"
scikit-learn = "^1.2.0"
gensim = "^4.2.0"
xgboost = "^1.7.2"
black = {extras = ["jupyter"], version = "^22.12.0"}
autoflake = "^2.0.0"
isort = "^5.11.2"
mypy = "^0.991"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
